# tiny-bell

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dev Radio Design _standalone_.html  LICENSE  README.md  index.html  package.json  plan-v2.md  plan-v3.md  plan.md  pnpm-lock.yaml  research.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: broker.yml  ci.yml  release.yml
broker/: README.md  SETUP.md  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
broker/src/: index.ts
broker/test/: index.test.ts
docs/: auth.md  connecting-accounts.md  prd.md  system-design.md
src/: index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/tray/: generate.sh
src-tauri/src/: cache.rs  keychain.rs  lib.rs  main.rs  notifications.rs  platform.rs  poller.rs  prefs.rs  redact.rs  shortcut.rs  store.rs  tray.rs  window.rs
src-tauri/src/adapters/: mod.rs  registry.rs  trait.rs
src-tauri/src/adapters/github/: cache.rs  mapper.rs  mod.rs  types.rs
src-tauri/src/adapters/railway/: client.rs  mapper.rs  mod.rs  types.rs
src-tauri/src/adapters/vercel/: mapper.rs  mod.rs  types.rs
src-tauri/src/auth/: github.rs  mod.rs  oauth.rs  pat.rs  railway.rs  strategy.rs  token_provider.rs  vercel.rs
src-tauri/src/commands/: accounts.rs  deployments.rs  mod.rs  notifications.rs  prefs.rs  ux.rs  window.rs
src/app/desktop/: desktop-app.tsx
src/app/dev/: sandbox-mocks.ts  sandbox.tsx
src/app/popover/: popover-app.tsx
src/components/: debug-panel.tsx  external-link-guard.tsx  theme-provider.tsx
src/components/account/: add-account-dialog.tsx  add-account-form.tsx  repo-selector.tsx
src/components/deployment/: deployment-card.tsx  status-icon.tsx
src/components/dr/: badge.tsx  brand-mark.tsx  button.tsx  icon.tsx  initials-avatar.tsx  input.tsx  (+7 more)
src/hooks/: use-dashboard.ts  use-scope.ts  use-theme.ts
src/lib/: accounts.ts  deployments.ts  format.ts  prefs.ts  provider-theme.ts  updates.ts
(+29 files in other folders)
